xzero-flow/FlowParser.cc
// This file is part of the "x0" project, http://github.com/christianparpart/x0>
//   (c) 2009-2017 Christian Parpart <christian@parpart.family>
//
// Licensed under the MIT License (the "License"); you may not use this
// file except in compliance with the License. You may obtain a copy of
// the License at: http://opensource.org/licenses/MIT

#include <xzero-flow/vm/NativeCallback.h>
#include <xzero-flow/FlowParser.h>
#include <xzero-flow/FlowLexer.h>
#include <xzero-flow/AST.h>
#include <xzero-flow/vm/Runtime.h>
#include <xzero/logging.h>
#include <xzero/Utility.h>
#include <unordered_map>
#include <unistd.h>

enum class OpSig {
  Invalid,
  BoolBool,
  NumNum,
  StringString,
  StringRegexp,
  IpIp,
  IpCidr,
  CidrCidr,
};

namespace std {
template <>
struct hash<OpSig> {
  uint32_t operator()(OpSig v) const noexcept {
    return static_cast<uint32_t>(v);
  }
};
}

namespace xzero {
namespace flow {

using vm::Opcode;

#define FLOW_DEBUG_PARSER 1

#if defined(FLOW_DEBUG_PARSER)
// {{{ trace
static size_t fnd = 0;
struct fntrace {
  std::string msg_;

  fntrace(const char* msg) : msg_(msg) {
    size_t i = 0;
    char fmt[1024];

    for (i = 0; i < 2 * fnd;) {
      fmt[i++] = ' ';
      fmt[i++] = ' ';
    }
    fmt[i++] = '-';
    fmt[i++] = '>';
    fmt[i++] = ' ';
    strcpy(fmt + i, msg_.c_str());

    logTrace("FlowParser", "$0", fmt);
    ++fnd;
  }

  ~fntrace() {
    --fnd;

    size_t i = 0;
    char fmt[1024];

    for (i = 0; i < 2 * fnd;) {
      fmt[i++] = ' ';
      fmt[i++] = ' ';
    }
    fmt[i++] = '<';
    fmt[i++] = '-';
    fmt[i++] = ' ';
    strcpy(fmt + i, msg_.c_str());

    logTrace("FlowParser", "$0", fmt);
  }
};
// }}}
#define FNTRACE() fntrace _(__PRETTY_FUNCTION__)
#define TRACE(msg...) logTrace("FlowParser", msg)
#else
#define FNTRACE()            do {} while (0)
#define TRACE(msg...) do {} while (0)
#endif

// {{{ scoped(SCOPED_SYMBOL)
class FlowParser::Scope {
 private:
  FlowParser* parser_;
  SymbolTable* table_;
  bool flipped_;

 public:
  Scope(FlowParser* parser, SymbolTable* table)
      : parser_(parser), table_(table), flipped_(false) {
    parser_->enter(table_);
  }

  Scope(FlowParser* parser, ScopedSymbol* symbol)
      : parser_(parser), table_(symbol->scope()), flipped_(false) {
    parser_->enter(table_);
  }

  Scope(FlowParser* parser, std::unique_ptr<SymbolTable>& table)
      : parser_(parser), table_(table.get()), flipped_(false) {
    parser_->enter(table_);
  }

  template <typename T>
  Scope(FlowParser* parser, std::unique_ptr<T>& symbol)
      : parser_(parser), table_(symbol->scope()), flipped_(false) {
    parser_->enter(table_);
  }

  bool flip() {
    flipped_ = !flipped_;
    return flipped_;
  }

  ~Scope() { parser_->leave(); }
};
#define scoped(SCOPED_SYMBOL) \
  for (FlowParser::Scope _(this, (SCOPED_SYMBOL)); _.flip();)
// }}}

FlowParser::FlowParser(vm::Runtime* runtime,
                       ImportHandler importHandler,
                       ErrorHandler errorHandler)
    : lexer_(new FlowLexer()),
      scopeStack_(nullptr),
      runtime_(runtime),
      errorHandler(errorHandler),
      importHandler(importHandler) {
  // enter(new SymbolTable(nullptr, "global"));
}

FlowParser::~FlowParser() {
  // leave();
  // assert(scopeStack_ == nullptr && "scopeStack not properly unwind. probably
  // a bug.");
}

void FlowParser::openString(const std::string& content) {
  lexer_->openString(content);
}

void FlowParser::openLocalFile(const std::string& filename) {
  lexer_->openLocalFile(filename);
}

void FlowParser::openStream(std::unique_ptr<std::istream>&& ifs,
                            const std::string& filename) {
  lexer_->openStream(std::move(ifs), filename);
}

SymbolTable* FlowParser::enter(SymbolTable* scope) {
  // printf("Parser::enter(): new top: %p \"%s\" (outer: %p \"%s\")\n", scope,
  // scope->name().c_str(), scopeStack_, scopeStack_ ?
  // scopeStack_->name().c_str() : "");

  scope->setOuterTable(scopeStack_);
  scopeStack_ = scope;

  return scope;
}

SymbolTable* FlowParser::leave() {
  SymbolTable* popped = scopeStack_;
  scopeStack_ = scopeStack_->outerTable();

  // printf("Parser::leave(): new top: %p \"%s\" (outer: %p \"%s\")\n", popped,
  // popped->name().c_str(), scopeStack_, scopeStack_ ?
  // scopeStack_->name().c_str() : "");

  return popped;
}

std::unique_ptr<Unit> FlowParser::parse() { return unit(); }

// {{{ type system
/**
 * Computes VM opcode for binary operation.
 *
 * @param token operator between left and right expression
 * @param left left hand expression
 * @param right right hand expression
 *
 * @return opcode that matches given expressions operator or EXIT if operands
 *incompatible.
 */
vm::Opcode makeOperator(FlowToken token, Expr* left, Expr* right) {
  // (bool, bool)     == !=
  // (num, num)       + - * / % ** << >> & | ^ and or xor == != <= >= < >
  // (string, string) + == != <= >= < > =^ =$ in
  // (string, regex)  =~
  // (ip, ip)         == !=
  // (ip, cidr)       in
  // (cidr, cidr)     == != in

  auto isString = [](FlowType t) { return t == FlowType::String; };
  auto isNumber = [](FlowType t) { return t == FlowType::Number; };
  auto isBool = [](FlowType t) { return t == FlowType::Boolean; };
  auto isIPAddr = [](FlowType t) { return t == FlowType::IPAddress; };
  auto isCidr = [](FlowType t) { return t == FlowType::Cidr; };
  auto isRegExp = [](FlowType t) { return t == FlowType::RegExp; };

  FlowType leftType = left->getType();
  FlowType rightType = right->getType();

  OpSig opsig = OpSig::Invalid;
  if (isBool(leftType) && isBool(rightType))
    opsig = OpSig::BoolBool;
  else if (isNumber(leftType) && isNumber(rightType))
    opsig = OpSig::NumNum;
  else if (isString(leftType) && isString(rightType))
    opsig = OpSig::StringString;
  else if (isString(leftType) && isRegExp(rightType))
    opsig = OpSig::StringRegexp;
  else if (isIPAddr(leftType) && isIPAddr(rightType))
    opsig = OpSig::IpIp;
  else if (isIPAddr(leftType) && isCidr(rightType))
    opsig = OpSig::IpCidr;
  else if (isCidr(leftType) && isCidr(rightType))
    opsig = OpSig::CidrCidr;

  static const std::unordered_map<OpSig, std::unordered_map<FlowToken, Opcode>>
  ops = {{OpSig::BoolBool,
          {{FlowToken::Equal, Opcode::NCMPEQ},
           {FlowToken::UnEqual, Opcode::NCMPNE},
           {FlowToken::And, Opcode::BAND},
           {FlowToken::Or, Opcode::BOR},
           {FlowToken::Xor, Opcode::BXOR}, }},
         {OpSig::NumNum,
          {{FlowToken::Plus, Opcode::NADD},
           {FlowToken::Minus, Opcode::NSUB},
           {FlowToken::Mul, Opcode::NMUL},
           {FlowToken::Div, Opcode::NDIV},
           {FlowToken::Mod, Opcode::NREM},
           {FlowToken::Pow, Opcode::NPOW},
           {FlowToken::Shl, Opcode::NSHL},
           {FlowToken::Shr, Opcode::NSHR},
           {FlowToken::BitAnd, Opcode::NAND},
           {FlowToken::BitOr, Opcode::NOR},
           {FlowToken::BitXor, Opcode::NXOR},
           {FlowToken::Equal, Opcode::NCMPEQ},
           {FlowToken::UnEqual, Opcode::NCMPNE},
           {FlowToken::LessOrEqual, Opcode::NCMPLT},
           {FlowToken::GreaterOrEqual, Opcode::NCMPGT},
           {FlowToken::Less, Opcode::NCMPLE},
           {FlowToken::Greater, Opcode::NCMPGE}, }},
         {OpSig::StringString,
          {{FlowToken::Plus, Opcode::SADD},
           {FlowToken::Equal, Opcode::SCMPEQ},
           {FlowToken::UnEqual, Opcode::SCMPNE},
           {FlowToken::LessOrEqual, Opcode::SCMPLE},
           {FlowToken::GreaterOrEqual, Opcode::SCMPGE},
           {FlowToken::Less, Opcode::SCMPLT},
           {FlowToken::Greater, Opcode::SCMPGT},
           {FlowToken::PrefixMatch, Opcode::SCMPBEG},
           {FlowToken::SuffixMatch, Opcode::SCMPEND},
           {FlowToken::In, Opcode::SCONTAINS}, }},
         {OpSig::StringRegexp, {{FlowToken::RegexMatch, Opcode::SREGMATCH}, }},
         {OpSig::IpIp,
          {{FlowToken::Equal, Opcode::PCMPEQ},
           {FlowToken::UnEqual, Opcode::PCMPNE}, }},
         {OpSig::IpCidr, {{FlowToken::In, Opcode::PINCIDR}, }},
         {OpSig::CidrCidr,
          {{FlowToken::Equal, Opcode::NOP},    // TODO
           {FlowToken::UnEqual, Opcode::NOP},  // TODO
           {FlowToken::In, Opcode::NOP},       // TODO
          }}, };

  auto a = ops.find(opsig);
  if (a == ops.end()) return Opcode::EXIT;

  auto b = a->second.find(token);
  if (b == a->second.end()) return Opcode::EXIT;

  return b->second;
}

/**
 * Casts given epxression into an expression of fixed type.
 *
 * @param source source expression to cast
 * @param target target (token) type to cast to.
 */
Opcode makeOperator(FlowToken target, Expr* source) {
  static const std::unordered_map<FlowType,
                                  std::unordered_map<FlowToken, Opcode>> ops =
      {{FlowType::Number,
        {{FlowToken::Not, Opcode::NCMPZ},
         {FlowToken::BitNot, Opcode::NNOT},
         {FlowToken::Minus, Opcode::NNEG},
         {FlowToken::StringType, Opcode::I2S},
         {FlowToken::BoolType, Opcode::NCMPZ},
         {FlowToken::NumberType, Opcode::NOP}, }},
       {FlowType::Boolean,
        {{FlowToken::Not, Opcode::BNOT},
         {FlowToken::BoolType, Opcode::NOP},
         {FlowToken::StringType, Opcode::I2S},  // XXX or better print "true" | "false" ?
        }},
       {FlowType::String,
        {{FlowToken::Not, Opcode::SISEMPTY},
         {FlowToken::NumberType, Opcode::S2I},
         {FlowToken::StringType, Opcode::NOP}, }},
       {FlowType::IPAddress, {{FlowToken::StringType, Opcode::P2S}, }},
       {FlowType::Cidr, {{FlowToken::StringType, Opcode::C2S}, }},
       {FlowType::RegExp, {{FlowToken::StringType, Opcode::R2S}, }}, };

  FlowType sourceType = source->getType();

  auto a = ops.find(sourceType);
  if (a == ops.end()) return Opcode::EXIT;

  auto b = a->second.find(target);
  if (b == a->second.end()) return Opcode::EXIT;

  return b->second;
}
// }}}
// {{{ error mgnt
void FlowParser::reportUnexpectedToken() {
  reportError("Unexpected token '%s'", token().c_str());
}

void FlowParser::reportError(const std::string& message) {

  if (!errorHandler) {
    char buf[1024];
    int n = snprintf(buf, sizeof(buf), "[%04zu:%02zu] %s\n", lexer_->line(),
                     lexer_->column(), message.c_str());
    write(2, buf, n);
    return;
  }

  char buf[1024];
  snprintf(buf, sizeof(buf), "[%04zu:%02zu] %s", lexer_->line(),
           lexer_->column(), message.c_str());
  errorHandler(buf);
}
// }}}
// {{{ lexing
FlowToken FlowParser::nextToken() const { return lexer_->nextToken(); }

bool FlowParser::expect(FlowToken value) {
  if (token() != value) {
    reportError("Unexpected token '%s' (expected: '%s')", token().c_str(),
                value.c_str());
    return false;
  }
  return true;
}

bool FlowParser::consume(FlowToken value) {
  if (!expect(value)) return false;

  nextToken();
  return true;
}

bool FlowParser::consumeIf(FlowToken value) {
  if (token() == value) {
    nextToken();
    return true;
  } else {
    return false;
  }
}

bool FlowParser::consumeUntil(FlowToken value) {
  for (;;) {
    if (token() == value) {
      nextToken();
      return true;
    }

    if (token() == FlowToken::Eof) return false;

    nextToken();
  }
}
// }}}
// {{{ decls
std::unique_ptr<Unit> FlowParser::unit() {
  auto unit = std::make_unique<Unit>();

  scoped(unit) {
    importRuntime();

    while (token() == FlowToken::Import) {
      if (!importDecl(unit.get())) {
        return nullptr;
      }
    }

    while (std::unique_ptr<Symbol> symbol = decl()) {
      scope()->appendSymbol(std::move(symbol));
    }
  }

  return unit;
}

void FlowParser::importRuntime() {
  if (runtime_) {
    TRACE("importing runtime, $0 builtins", runtime_->builtins().size());

    for (const auto& builtin : runtime_->builtins()) {
      declareBuiltin(builtin);
    }
  }
}

void FlowParser::declareBuiltin(const vm::NativeCallback* native) {
  TRACE("declareBuiltin (scope:$0): $1", scope(), native->signature().to_s());

  if (native->isHandler()) {
    createSymbol<BuiltinHandler>(native);
  } else {
    createSymbol<BuiltinFunction>(native);
  }
}

std::unique_ptr<Symbol> FlowParser::decl() {
  FNTRACE();

  switch (token()) {
    case FlowToken::Var:
      return varDecl();
    case FlowToken::Handler:
      return handlerDecl(true);
    case FlowToken::Ident:
      return handlerDecl(false);
    default:
      return nullptr;
  }
}

// 'var' IDENT ['=' EXPR] ';'
std::unique_ptr<Variable> FlowParser::varDecl() {
  FNTRACE();
  FlowLocation loc(lexer_->location());

  if (!consume(FlowToken::Var)) return nullptr;

  if (!consume(FlowToken::Ident)) return nullptr;

  std::string name = stringValue();

  if (!consume(FlowToken::Assign)) return nullptr;

  std::unique_ptr<Expr> initializer = expr();
  if (!initializer) return nullptr;

  loc.update(initializer->location().end);
  consume(FlowToken::Semicolon);

  return std::make_unique<Variable>(name, std::move(initializer), loc);
}

bool FlowParser::importDecl(Unit* unit) {
  FNTRACE();

  // 'import' NAME_OR_NAMELIST ['from' PATH] ';'
  nextToken();  // skip 'import'

  std::list<std::string> names;
  if (!importOne(names)) {
    consumeUntil(FlowToken::Semicolon);
    return false;
  }

  while (token() == FlowToken::Comma) {
    nextToken();
    if (!importOne(names)) {
      consumeUntil(FlowToken::Semicolon);
      return false;
    }
  }

  std::string path;
  if (consumeIf(FlowToken::From)) {
    path = stringValue();

    if (!consumeOne(FlowToken::String, FlowToken::RawString)) {
      consumeUntil(FlowToken::Semicolon);
      return false;
    }

    if (!path.empty() && path[0] != '/') {
      std::string base(lexer_->location().filename);

      size_t r = base.rfind('/');
      if (r != std::string::npos) ++r;

      base = base.substr(0, r);
      path = base + path;
    }
  }

  for (auto i = names.begin(), e = names.end(); i != e; ++i) {
    std::vector<vm::NativeCallback*> builtins;

    if (importHandler && !importHandler(*i, path, &builtins)) return false;

    unit->import(*i, path);

    for (vm::NativeCallback* native : builtins) {
      declareBuiltin(native);
    }
  }

  consume(FlowToken::Semicolon);
  return true;
}

bool FlowParser::importOne(std::list<std::string>& names) {
  switch (token()) {
    case FlowToken::Ident:
    case FlowToken::String:
    case FlowToken::RawString:
      names.push_back(stringValue());
      nextToken();
      break;
    case FlowToken::RndOpen:
      nextToken();
      if (!importOne(names)) return false;

      while (token() == FlowToken::Comma) {
        nextToken();  // skip comma
        if (!importOne(names)) return false;
      }

      if (!consume(FlowToken::RndClose)) return false;
      break;
    default:
      reportError("Syntax error in import declaration.");
      return false;
  }
  return true;
}

// handlerDecl ::= 'handler' IDENT (';' | [do] stmt)
std::unique_ptr<Handler> FlowParser::handlerDecl(bool keyword) {
  FNTRACE();

  FlowLocation loc(location());

  if (keyword) {
    nextToken();  // 'handler'
  }

  consume(FlowToken::Ident);
  std::string name = stringValue();
  if (consumeIf(FlowToken::Semicolon)) {  // forward-declaration
    loc.update(end());
    return std::make_unique<Handler>(name, loc);
  }

  std::unique_ptr<SymbolTable> st = enterScope("handler-" + name);
  std::unique_ptr<Stmt> body = stmt();
  leaveScope();

  if (!body) return nullptr;

  loc.update(body->location().end);

  // forward-declared / previousely -declared?
  if (Handler* handler = scope()->lookup<Handler>(name, Lookup::Self)) {
    if (handler->body() != nullptr) {
      // TODO say where we found the other hand, compared to this one.
      reportError("Redeclaring handler \"%s\"", handler->name().c_str());
      return nullptr;
    }
    handler->implement(std::move(st), std::move(body));
    handler->owner()->removeSymbol(handler);
    return std::unique_ptr<Handler>(handler);
  }

  return std::make_unique<Handler>(name, std::move(st), std::move(body), loc);
}
// }}}
// {{{ expr
std::unique_ptr<Expr> FlowParser::expr() {
  FNTRACE();

  return logicExpr();
}

std::unique_ptr<Expr> FlowParser::logicExpr() {
  FNTRACE();

  std::unique_ptr<Expr> lhs = notExpr();
  if (!lhs) return nullptr;

  for (;;) {
    switch (token()) {
      case FlowToken::And:
      case FlowToken::Xor:
      case FlowToken::Or: {
        FlowToken binop = token();
        nextToken();

        std::unique_ptr<Expr> rhs = notExpr();
        if (!rhs) return nullptr;

        Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
        if (opc == Opcode::EXIT) {
          reportError("Type error in binary expression (%s %s %s).",
                      tos(lhs->getType()).c_str(), binop.c_str(),
                      tos(rhs->getType()).c_str());
          return nullptr;
        }

        lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
        break;
      }
      default:
        return lhs;
    }
  }
}

std::unique_ptr<Expr> FlowParser::notExpr() {
  FNTRACE();

  size_t nots = 0;

  FlowLocation loc = location();

  while (consumeIf(FlowToken::Not)) nots++;

  std::unique_ptr<Expr> subExpr = relExpr();
  if (!subExpr) return nullptr;

  if ((nots % 2) == 0) return subExpr;

  vm::Opcode op = makeOperator(FlowToken::Not, subExpr.get());
  if (op == Opcode::EXIT) {
    reportError(
        "Type cast error in unary 'not'-operator. Invalid source type <%s>.",
        subExpr->getType());
    return nullptr;
  }

  return std::make_unique<UnaryExpr>(op, std::move(subExpr), loc.update(end()));
}

std::unique_ptr<Expr> FlowParser::relExpr() {
  FNTRACE();

  std::unique_ptr<Expr> lhs = addExpr();
  if (!lhs) return nullptr;

  for (;;) {
    switch (token()) {
      case FlowToken::Equal:
      case FlowToken::UnEqual:
      case FlowToken::Less:
      case FlowToken::Greater:
      case FlowToken::LessOrEqual:
      case FlowToken::GreaterOrEqual:
      case FlowToken::PrefixMatch:
      case FlowToken::SuffixMatch:
      case FlowToken::RegexMatch:
      case FlowToken::In: {
        FlowToken binop = token();
        nextToken();

        std::unique_ptr<Expr> rhs = addExpr();
        if (!rhs) return nullptr;

        Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
        if (opc == Opcode::EXIT) {
          reportError("Type error in binary expression (%s versus %s).",
                      tos(lhs->getType()).c_str(), tos(rhs->getType()).c_str());
          return nullptr;
        }

        lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
      }
      default:
        return lhs;
    }
  }
}

std::unique_ptr<Expr> FlowParser::addExpr() {
  FNTRACE();

  std::unique_ptr<Expr> lhs = mulExpr();
  if (!lhs) return nullptr;

  for (;;) {
    switch (token()) {
      case FlowToken::Plus:
      case FlowToken::Minus: {
        FlowToken binop = token();
        nextToken();

        std::unique_ptr<Expr> rhs = mulExpr();
        if (!rhs) return nullptr;

        Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
        if (opc == Opcode::EXIT) {
          reportError("Type error in binary expression (%s versus %s).",
                      tos(lhs->getType()).c_str(), tos(rhs->getType()).c_str());
          return nullptr;
        }

        lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
        break;
      }
      default:
        return lhs;
    }
  }
}

std::unique_ptr<Expr> FlowParser::mulExpr() {
  FNTRACE();

  std::unique_ptr<Expr> lhs = powExpr();
  if (!lhs) return nullptr;

  for (;;) {
    switch (token()) {
      case FlowToken::Mul:
      case FlowToken::Div:
      case FlowToken::Mod:
      case FlowToken::Shl:
      case FlowToken::Shr: {
        FlowToken binop = token();
        nextToken();

        std::unique_ptr<Expr> rhs = powExpr();
        if (!rhs) return nullptr;

        Opcode opc = makeOperator(binop, lhs.get(), rhs.get());
        if (opc == Opcode::EXIT) {
          reportError("Type error in binary expression (%s versus %s).",
                      tos(lhs->getType()).c_str(), tos(rhs->getType()).c_str());
          return nullptr;
        }

        lhs = std::make_unique<BinaryExpr>(opc, std::move(lhs), std::move(rhs));
        break;
      }
      default:
        return lhs;
    }
  }
}

std::unique_ptr<Expr> FlowParser::powExpr() {
  // powExpr ::= negExpr ('**' powExpr)*
  FNTRACE();

  FlowLocation sloc(location());
  std::unique_ptr<Expr> left = negExpr();
  if (!left) return nullptr;

  while (token() == FlowToken::Pow) {
    nextToken();

    std::unique_ptr<Expr> right = powExpr();
    if (!right) return nullptr;

    auto opc = makeOperator(FlowToken::Pow, left.get(), right.get());
    if (opc == Opcode::EXIT) {
      reportError("Type error in binary expression (%s versus %s).",
                  tos(left->getType()).c_str(), tos(right->getType()).c_str());
      return nullptr;
    }

    left = std::make_unique<BinaryExpr>(opc, std::move(left), std::move(right));
  }

  return left;
}

std::unique_ptr<Expr> FlowParser::negExpr() {
  // negExpr ::= ['-'] primaryExpr
  FNTRACE();

  FlowLocation loc = location();

  if (consumeIf(FlowToken::Minus)) {
    std::unique_ptr<Expr> e = negExpr();
    if (!e) return nullptr;

    vm::Opcode op = makeOperator(FlowToken::Minus, e.get());
    if (op == Opcode::EXIT) {
      reportError(
          "Type cast error in unary 'neg'-operator. Invalid source type <%s>.",
          e->getType());
      return nullptr;
    }

    e = std::make_unique<UnaryExpr>(op, std::move(e), loc.update(end()));
    return e;
  } else {
    return bitNotExpr();
  }
}

std::unique_ptr<Expr> FlowParser::bitNotExpr() {
  // negExpr ::= ['~'] primaryExpr
  FNTRACE();

  FlowLocation loc = location();

  if (consumeIf(FlowToken::BitNot)) {
    std::unique_ptr<Expr> e = bitNotExpr();
    if (!e) return nullptr;

    vm::Opcode op = makeOperator(FlowToken::BitNot, e.get());
    if (op == Opcode::EXIT) {
      reportError(
          "Type cast error in unary 'not'-operator. Invalid source type <%s>.",
          e->getType());
      return nullptr;
    }

    e = std::make_unique<UnaryExpr>(op, std::move(e), loc.update(end()));
    return e;
  } else {
    return primaryExpr();
  }
}

// primaryExpr ::= literalExpr
//               | variable
//               | function '(' paramList ')'
//               | '(' expr ')'
//               | '[' exprList ']'
std::unique_ptr<Expr> FlowParser::primaryExpr() {
  FNTRACE();

  switch (token()) {
    case FlowToken::String:
    case FlowToken::RawString:
    case FlowToken::Number:
    case FlowToken::Boolean:
    case FlowToken::IP:
    case FlowToken::Cidr:
    case FlowToken::RegExp:
      return literalExpr();
    case FlowToken::StringType:
    case FlowToken::NumberType:
    case FlowToken::BoolType:
      return castExpr();
    case FlowToken::InterpolatedStringFragment:
      return interpolatedStr();
    case FlowToken::Ident: {
      FlowLocation loc = location();
      std::string name = stringValue();
      nextToken();

      std::list<Symbol*> symbols;
      Symbol* symbol = scope()->lookup(name, Lookup::All, &symbols);
      if (!symbol) {
        // XXX assume that given symbol is a auto forward-declared handler.
        Handler* href = (Handler*)globalScope()->appendSymbol(
            std::make_unique<Handler>(name, loc));
        return std::make_unique<HandlerRefExpr>(href, loc);
      }

      if (auto variable = dynamic_cast<Variable*>(symbol))
        return std::make_unique<VariableExpr>(variable, loc);

      if (auto handler = dynamic_cast<Handler*>(symbol))
        return std::make_unique<HandlerRefExpr>(handler, loc);

      if (symbol->type() == Symbol::BuiltinFunction) {
        std::list<Callable*> callables;
        for (Symbol* s : symbols) {
          if (auto c = dynamic_cast<BuiltinFunction*>(s)) {
            callables.push_back(c);
          }
        }

        ParamList params;
        // {{{ parse call params
        if (token() == FlowToken::RndOpen) {
          nextToken();
          if (token() != FlowToken::RndClose) {
            auto ra = paramList();
            if (!ra) {
              return nullptr;
            }
            params = std::move(*ra);
          }
          loc.end = lastLocation().end;
          if (!consume(FlowToken::RndClose)) {
            return nullptr;
          }
        } else if (FlowTokenTraits::isUnaryOp(token()) ||
                   FlowTokenTraits::isLiteral(token()) ||
                   token() == FlowToken::Ident ||
                   token() == FlowToken::BrOpen ||
                   token() == FlowToken::RndOpen) {
          auto ra = paramList();
          if (!ra) {
            return nullptr;
          }
          params = std::move(*ra);
          loc.end = params.location().end;
        }
        // }}}

        return resolve(callables, std::move(params));
      }

      reportError("Unsupported symbol type of \"%s\" in expression.",
                  name.c_str());
      return nullptr;
    }
    case FlowToken::Begin: {  // lambda-like inline function ref
      char name[64];
      static unsigned long i = 0;
      ++i;
      snprintf(name, sizeof(name), "__lambda_%lu", i);

      FlowLocation loc = location();
      auto st = std::make_unique<SymbolTable>(scope(), name);
      enter(st.get());
      std::unique_ptr<Stmt> body = compoundStmt();
      leave();

      if (!body) return nullptr;

      loc.update(body->location().end);

      Handler* handler = new Handler(name, std::move(st), std::move(body), loc);
      // TODO (memory leak): add handler to unit's global scope, i.e. via:
      //       - scope()->rootScope()->insert(handler);
      //       - unit_->scope()->insert(handler);
      //       to get free'd
      return std::make_unique<HandlerRefExpr>(handler, loc);
    }
    case FlowToken::RndOpen: {
      FlowLocation loc = location();
      nextToken();
      std::unique_ptr<Expr> e = expr();
      consume(FlowToken::RndClose);
      if (e) {
        e->setLocation(loc.update(end()));
      }
      return e;
    }
    case FlowToken::BrOpen:
      return arrayExpr();
    default:
      TRACE("Expected primary expression. Got something... else.");
      reportUnexpectedToken();
      return nullptr;
  }
}

std::unique_ptr<Expr> FlowParser::arrayExpr() {
  FlowLocation loc = location();
  nextToken();  // '['
  std::vector<std::unique_ptr<Expr>> fields;

  if (token() != FlowToken::BrClose) {
    auto e = expr();
    if (!e) return nullptr;

    fields.push_back(std::move(e));

    while (consumeIf(FlowToken::Comma)) {
      e = expr();
      if (!e) return nullptr;

      fields.push_back(std::move(e));
    }
  }

  consume(FlowToken::BrClose);

  if (!fields.empty()) {
    FlowType baseType = fields.front()->getType();
    for (const auto& e : fields) {
      if (e->getType() != baseType) {
        reportError("Mixed element types in array not allowed.");
        return nullptr;
      }
    }

    switch (baseType) {
      case FlowType::Number:
      case FlowType::String:
      case FlowType::IPAddress:
      case FlowType::Cidr:
        break;
      default:
        reportError(
            "Invalid array expression. Element type <%s> is not allowed.",
            tos(baseType).c_str());
        return nullptr;
    }
  } else {
    reportError("Empty arrays are not allowed.");
    return nullptr;
  }

  return std::make_unique<ArrayExpr>(loc.update(end()), std::move(fields));
}

std::unique_ptr<Expr> FlowParser::literalExpr() {
  FNTRACE();

  // literalExpr  ::= NUMBER [UNIT]
  //                | BOOL
  //                | STRING
  //                | IP_ADDR
  //                | IP_CIDR
  //                | REGEXP
